--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </div>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="#home">Home</a>
-        <a href="#duration">Duration</a>
-        <a href="#details">Details</a>
-        <a href="#contact">Contact</a>
+        <a href="#home" target="_self">Home</a>
+        <a href="#duration" target="_self">Duration</a>
+        <a href="#details" target="_self">Details</a>
+        <a href="#contact" target="_self">Contact</a>
     </div>
 
     <button class="openbtn" onclick="openNav()">☰ Open</button>
@@ -33,8 +33,8 @@
         <div class="container p-5 w-75" id="duration">
             <div class="row">
                 <div class="inner text-center text-white d-flex justify-content-center">
-                    <div class="singer-box" data-singer="one">
-                        Singer One
+                    <div class="singer-box w-75 pt-2" data-singer="one">
+                        ٍSinger One
                         <div class="singer-info bg-secondary" id="singer-one-info">
                             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="inner text-center text-white d-flex justify-content-center">
-                    <div class="singer-box" data-singer="two">
+                    <div class="singer-box w-75 pt-2" data-singer="two">
                         Singer Two
                         <div class="singer-info bg-secondary" id="singer-two-info">
                             <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="inner text-center text-white d-flex justify-content-center">
-                    <div class="singer-box" data-singer="three">
+                    <div class="singer-box w-75 pt-2" data-singer="three">
                         Singer Three
                         <div class="singer-info bg-secondary" id="singer-three-info">
                             <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising
@@ -96,9 +96,9 @@
                     </div>
                 </div>
                 <div class="inner text-center text-white d-flex justify-content-center">
-                    <div class="singer-box" data-singer="four">
+                    <div class="singer-box w-75 pt-2" data-singer="four">
                         Singer Four
-                        <div class="singer-info bg-secondary" id="singer-four-info">
+                        <div class="singer-info bg-secondary p-3" id="singer-four-info">
                             <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
                                 voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
                                 occaecati
@@ -122,27 +122,27 @@
             </div>
         </div>
     </div>
-    <section class="numbers text-light mt-5 text-center " id="details">
+    <section class="numbers text-light mt-5 text-center" id="details">
         <div class="layer bg-danger bg-opacity-75 ">
             <div class="container " id="demo">
                 <div class="row ms-5">
                     <div class="col-md-2 borderss m-4 p-5">
-                        <h2 class="days">997 </h2>
+                        <h2 id="days"></h2>
 
                     </div>
                     <div class="col-md-2  borderss m-4 p-5">
 
-                        <h2 class="hours">23 </h2>
+                        <h2 id="hours"></h2>
 
                     </div>
                     <div class="col-md-2  borderss m-4 p-5">
 
-                        <h2 class="minutes">58 </h2>
+                        <h2 id="minutes"></h2>
 
                     </div>
                     <div class="col-md-2  borderss m-4 p-5">
 
-                        <h2 class="seconds">60</h2>
+                        <h2 id="seconds"></h2>
 
                     </div>
                 </div>
