--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="inner text-center text-white d-flex justify-content-center">
                     <div class="singer-box w-75 pt-2" data-singer="one">
                         ٍSinger One
-                        <div class="singer-info bg-secondary" id="singer-one-info">
+                        <div class="singer-info bg-grey" id="singer-one-info">
                             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -51,7 +51,7 @@
                 <div class="inner text-center text-white d-flex justify-content-center">
                     <div class="singer-box w-75 pt-2" data-singer="two">
                         Singer Two
-                        <div class="singer-info bg-secondary" id="singer-two-info">
+                        <div class="singer-info bg-grey" id="singer-two-info">
                             <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                                 laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
                                 architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
@@ -73,7 +73,7 @@
                 <div class="inner text-center text-white d-flex justify-content-center">
                     <div class="singer-box w-75 pt-2" data-singer="three">
                         Singer Three
-                        <div class="singer-info bg-secondary" id="singer-three-info">
+                        <div class="singer-info bg-grey" id="singer-three-info">
                             <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising
                                 pain was born and I will give you a complete account of the system, and expound the
                                 actual
@@ -98,7 +98,7 @@
                 <div class="inner text-center text-white d-flex justify-content-center">
                     <div class="singer-box w-75 pt-2" data-singer="four">
                         Singer Four
-                        <div class="singer-info bg-secondary p-3" id="singer-four-info">
+                        <div class="singer-info bg-grey p-3" id="singer-four-info">
                             <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
                                 voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
                                 occaecati
@@ -126,21 +126,21 @@
         <div class="layer bg-danger bg-opacity-75 ">
             <div class="container " id="demo">
                 <div class="row ms-5">
-                    <div class="col-md-2 borderss m-4 p-5">
+                    <div class="col-md-2 borderss m-4 p-4">
                         <h2 id="days"></h2>
 
                     </div>
-                    <div class="col-md-2  borderss m-4 p-5">
+                    <div class="col-md-2  borderss m-4 p-4">
 
                         <h2 id="hours"></h2>
 
                     </div>
-                    <div class="col-md-2  borderss m-4 p-5">
+                    <div class="col-md-2  borderss m-4 p-4">
 
                         <h2 id="minutes"></h2>
 
                     </div>
-                    <div class="col-md-2  borderss m-4 p-5">
+                    <div class="col-md-2  borderss m-4 p-4">
 
                         <h2 id="seconds"></h2>
 
