--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <div class="header" id="home">
         <div class="layer">
-            <div class="header-content">
+            <div class="header-content text-white">
                 <h1>ُEgyption Party</h1>
                 <p>Let's have Fun</p>
             </div>
         </div>
     </div>
-    <div id="mySidebar" class="sidebar">
+    <div id="mySidebar" class="sidebar h-100 position-fixed z-1 top-0 start-0 overflow-x-hidden pt-4">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="#home" target="_self">Home</a>
         <a href="#duration" target="_self">Duration</a>
@@ -28,7 +28,7 @@
         <a href="#contact" target="_self">Contact</a>
     </div>
 
-    <button class="openbtn" onclick="openNav()">☰ Open</button>
+    <button class="openbtn fs-3 bg-transparent text-white position-absolute" onclick="openNav()">☰ Open</button>
     <div id="main">
         <div class="container p-5 w-75" id="duration">
             <div class="row">
