--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
     </div>
-    <div id="mySidebar" class="sidebar h-100 position-fixed z-1 top-0 start-0 overflow-x-hidden pt-4">
+    <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="#home" target="_self">Home</a>
         <a href="#duration" target="_self">Duration</a>
